[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/ui/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://src/ui/OptionsMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/ui/button-normal.tres" type="Texture" id=3]
[ext_resource path="res://assets/ui/button-pressed.tres" type="Texture" id=4]
[ext_resource path="res://assets/ui/button-focus.tres" type="Texture" id=5]
[ext_resource path="res://assets/font/font_menu.tres" type="DynamicFont" id=12]

[sub_resource type="Animation" id=1]
resource_name = "options"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("OptionsMenu:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 270 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OptionsMenu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
layer = 10
script = ExtResource( 1 )

[node name="Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.509804 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseTitle" type="Label" parent="Menu"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 23.0
margin_top = -71.0
margin_right = 72.0
margin_bottom = -55.0
custom_fonts/font = ExtResource( 12 )
text = "PAUSED"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Menu"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -27.0
margin_right = 128.0
margin_bottom = 129.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="TextureButton" parent="Menu/GridContainer"]
margin_right = 128.0
margin_bottom = 36.0
focus_neighbour_bottom = NodePath("../ResetButton")
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
texture_focused = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/GridContainer/ResumeButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -9.0
margin_right = 34.0
margin_bottom = 7.0
custom_fonts/font = ExtResource( 12 )
text = "RESUME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetButton" type="TextureButton" parent="Menu/GridContainer"]
margin_top = 40.0
margin_right = 128.0
margin_bottom = 76.0
focus_neighbour_top = NodePath("../ResumeButton")
focus_neighbour_bottom = NodePath("../QuitButton")
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
texture_focused = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/GridContainer/ResetButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -9.0
margin_right = 22.0
margin_bottom = 7.0
custom_fonts/font = ExtResource( 12 )
text = "RESET"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="TextureButton" parent="Menu/GridContainer"]
margin_top = 80.0
margin_right = 128.0
margin_bottom = 116.0
focus_neighbour_top = NodePath("../ResumeButton")
focus_neighbour_bottom = NodePath("../QuitButton")
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
texture_focused = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/GridContainer/OptionsButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -9.0
margin_right = 22.0
margin_bottom = 7.0
custom_fonts/font = ExtResource( 12 )
text = "OPTIONS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="TextureButton" parent="Menu/GridContainer"]
margin_top = 120.0
margin_right = 128.0
margin_bottom = 156.0
focus_neighbour_top = NodePath("../ResetButton")
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
texture_focused = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu/GridContainer/QuitButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -9.0
margin_right = 11.0
margin_bottom = 7.0
custom_fonts/font = ExtResource( 12 )
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsMenu" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 270.0
margin_bottom = 270.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="OptionsMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.509804 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsMenu" parent="OptionsMenu" instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -89.5
margin_top = -97.0
margin_right = 89.5
margin_bottom = 97.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/options = SubResource( 1 )
[connection signal="pressed" from="Menu/GridContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Menu/GridContainer/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="pressed" from="Menu/GridContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Menu/GridContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="confirmed" from="OptionsMenu/OptionsMenu" to="." method="_on_OptionsMenu_confirmed"]
